Reset model when there are new available connections

Summary:
BUG: 406765

NetworkManager will remove all connections (at least wireless) and then add them again.
When user creates a new connection and clicks "Disconnect" button before adding connections back, the one which user tried to connect to will disappear from list of available, and it will become impossible to reactivate it from applet.

Reviewers: jgrulich

Reviewed By: jgrulich

Subscribers: plasma-devel

Tags: #plasma

Differential Revision: https://phabricator.kde.org/D20788